appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Open the filter page"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::3"
    label: "Expand Grain or Cereal accordion"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::3::Item::0"
    label: "Select Spaghetti as filter"

- runFlow:
    file: "../../asserts/search/en/filters/filtersViewFilteredOnSpaghetti.yaml"
    label: "Assert filter view with Spaghetti selected"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Remove Spaghetti filter by tapping on chip"

- assertNotVisible:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Spaghetti filter chip is no longer visible"

- assertNotVisible:
    text: "Spaghetti"
    label: "Spaghetti filter text is no longer visible"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Close the filter page"

- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate back to Home screen"
