appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Open the filter page"

- runFlow:
    file: "../../asserts/search/en/filters/filtersViewNoFilter.yaml"
    label: "Assert filter view with no filters applied"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Close the filter page"

- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate back to Home screen"
