name: "1 - Add New Ingredient Flow"
appId: "com.recipedia"
tags:
  - database
  - ingredients-db
---
- runFlow:
    file: "../../flows/setupFirstTest.yaml"
    label: "Setup - Launch app and wait for ready"

- runFlow:
    file: "../../flows/parameters/ingredients/navigateToIngredientsSettings.yaml"
    label: "Action - Navigate to Ingredients Settings"

- runFlow:
    file: "../../asserts/parameters/ingredients/en/assertIngredientsSettingsScreen.yaml"
    label: "Assert - Verify Ingredients Settings screen displays correctly"

- tapOn:
    id: "IngredientsSettings::BottomActionButton"
    label: "Action - Open add ingredient dialog"

- runFlow:
    file: "../../asserts/parameters/ingredients/en/assertAddModalOpen.yaml"
    label: "Assert - Verify Add ingredient modal displayed"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Name::CustomTextInput"
    label: "Action - Focus on ingredient name input"

- eraseText:
    label: "Action - Clear existing ingredient name"

- inputText:
    text: "TestIngredient"
    label: "Action - Enter new ingredient name"

- hideKeyboard:
    label: "Action - Hide keyboard"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Menu::Button"
    label: "Action - Open type dropdown"

- tapOn:
    text: "Vegetable"
    label: "Action - Select vegetable type"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::Unit::CustomTextInput"
    label: "Action - Focus on unit input"

- inputText:
    text: "g"
    label: "Action - Enter unit"

- hideKeyboard:
    label: "Action - Hide keyboard"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::SeasonalityCalendar::12"
    label: "Action - Add december to seasonality"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::ConfirmButton"
    label: "Action - Confirm adding new ingredient"

- scrollUntilVisible:
    element:
      text: "TestIngredient"
    direction: UP
    speed: 60
    centerElement: true
    label: "Action - Scroll to new ingredient"

- assertVisible:
    id: "IngredientsSettings::34::IngredientName"
    text: "TestIngredient"
    label: "Assert - Verify new ingredient displayed in list"

- runFlow:
    file: "../../flows/parameters/ingredients/returnToHome.yaml"
    label: "Cleanup - Return to Home screen"
