appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/parameters/ingredients/navigateToIngredientsSettings.yaml"
    label: "Navigate to Ingredients Settings screen"

- runFlow:
    file: "../../../flows/parameters/ingredients/addNewIngredient.yaml"
    label: "Create new ingredient 'RecipeIngredient' with no seasonality"

- runFlow:
    file: "../../../flows/parameters/ingredients/returnToHome.yaml"
    label: "Return to Home screen"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/createRecipeWithIngredient.yaml"
    label: "Create minimal recipe with the new ingredient"

- runFlow:
    file: "../../../flows/recipe/verifyIngredientInRecipe.yaml"
    label: "Verify ingredient appears correctly in recipe"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Remove filter"

# TODO bug
#- runFlow:
#    file: "../../../flows/filter/applyVegetableTypeFilter.yaml"
#    label: "Apply vegetable type filter"
#
#- runFlow:
#    file: "../../../flows/filter/verifyRecipeInFilteredList.yaml"
#    label: "Verify recipe is found with vegetable filter applied"
#
#- tapOn:
#    id: "SearchScreen::FiltersSelection::0::Chip"
#    label: "Remove filter"

- runFlow:
    file: "../../../flows/filter/applySeasonFilter.yaml"
    label: "Apply season filter"

- runFlow:
    file: "../../../flows/filter/verifyRecipeNotInSeasonFilteredList.yaml"
    label: "Verify recipe is not found when season filter is ON (ingredient has no seasonality)"

- tapOn:
    id: "SearchScreen::FiltersSelection::1::Chip"
    label: "Remove filter on name"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Remove on-season filter"

- runFlow:
    file: "../../../flows/parameters/ingredients/navigateToIngredientsSettings.yaml"
    label: "Navigate to Ingredients Settings screen"

- runFlow:
    file: "../../../flows/parameters/ingredients/deleteRecipeIngredient.yaml"
    label: "Delete RecipeIngredient from database"

- runFlow:
    file: "../../../flows/parameters/ingredients/returnToHome.yaml"
    label: "Return to Home screen"

- runFlow:
    file: "../../../flows/recipe/verifyIngredientRemovedFromRecipe.yaml"
    label: "Verify ingredient has been removed from the recipe"

- runFlow:
    file: "../../../flows/recipe/deleteRecipe.yaml"
    label: "Delete test recipe for cleanup"
